@@ -669,6 +669,8 @@ namespace mapnik
       {
          Envelope<double> ext=t_.forward(raster->ext_);
          ImageData32 target(int(ext.width() + 0.5),int(ext.height() + 0.5));
+         int start_x = int(ext.minx()+0.5);
+         int start_y = int(ext.miny()+0.5);
 
          if (sym.get_scaling() == "fast"){
             scale_image<ImageData32>(target,raster->data_);
@@ -682,31 +684,31 @@ namespace mapnik
 
          if (sym.get_mode() == "normal"){
              if (sym.get_opacity() == 1.0) {
-                pixmap_.set_rectangle(int(ext.minx()),int(ext.miny()),target);
+                pixmap_.set_rectangle(start_x,start_y,target);
              } else {
-                pixmap_.set_rectangle_alpha2(target,int(ext.minx()),int(ext.miny()), sym.get_opacity());
+                pixmap_.set_rectangle_alpha2(target,start_x,start_y, sym.get_opacity());
              }
          } else if (sym.get_mode() == "grain_merge"){
-            pixmap_.template merge_rectangle<MergeGrain> (target,int(ext.minx()),int(ext.miny()), sym.get_opacity());
+            pixmap_.template merge_rectangle<MergeGrain> (target,start_x,start_y, sym.get_opacity());
          } else if (sym.get_mode() == "grain_merge2"){
-            pixmap_.template merge_rectangle<MergeGrain2> (target,int(ext.minx()),int(ext.miny()), sym.get_opacity());
+            pixmap_.template merge_rectangle<MergeGrain2> (target,start_x,start_y, sym.get_opacity());
          } else if (sym.get_mode() == "multiply"){
-            pixmap_.template merge_rectangle<Multiply> (target,int(ext.minx()),int(ext.miny()), sym.get_opacity());
+            pixmap_.template merge_rectangle<Multiply> (target,start_x,start_y, sym.get_opacity());
          } else if (sym.get_mode() == "multiply2"){
-            pixmap_.template merge_rectangle<Multiply2> (target,int(ext.minx()),int(ext.miny()), sym.get_opacity());
+            pixmap_.template merge_rectangle<Multiply2> (target,start_x,start_y, sym.get_opacity());
          } else if (sym.get_mode() == "divide"){
-            pixmap_.template merge_rectangle<Divide> (target,int(ext.minx()),int(ext.miny()), sym.get_opacity());
+            pixmap_.template merge_rectangle<Divide> (target,start_x,start_y, sym.get_opacity());
          } else if (sym.get_mode() == "divide2"){
-            pixmap_.template merge_rectangle<Divide2> (target,int(ext.minx()),int(ext.miny()), sym.get_opacity());
+            pixmap_.template merge_rectangle<Divide2> (target,start_x,start_y, sym.get_opacity());
          } else if (sym.get_mode() == "screen"){
-            pixmap_.template merge_rectangle<Screen> (target,int(ext.minx()),int(ext.miny()), sym.get_opacity());
+            pixmap_.template merge_rectangle<Screen> (target,start_x,start_y, sym.get_opacity());
          } else if (sym.get_mode() == "hard_light"){
-            pixmap_.template merge_rectangle<HardLight> (target,int(ext.minx()),int(ext.miny()), sym.get_opacity());
+            pixmap_.template merge_rectangle<HardLight> (target,start_x,start_y, sym.get_opacity());
          } else {
              if (sym.get_opacity() == 1.0){
-                 pixmap_.set_rectangle(int(ext.minx()),int(ext.miny()),target);
+                 pixmap_.set_rectangle(start_x,start_y,target);
              } else {
-                pixmap_.set_rectangle_alpha2(target,int(ext.minx()),int(ext.miny()), sym.get_opacity());
+                pixmap_.set_rectangle_alpha2(target,start_x,start_y, sym.get_opacity());
              }
          }
          // TODO: other modes? (add,diff,sub,...)
