@@ -14,6 +14,8 @@ For a complete change history, see the SVN log.
 0.6.1 SVN
 ---------
 
+- Rasters: Handle rounding to allow better alignment of raster layers (r1079) (#295)
+
 - AGG Renderer: Added option to control output JPEG quality (r1078) (#198)
 
 - Plugins: Fixed segfault in OGC Plugin with empty geometries (r1074) (#292)
